# VFirewall

./: README.md  build_deb.sh  diff.txt  inspect.py  meson.build  vaxp-firewall_0.1.0_amd64.deb  vaxp-firewall_1.0-1_amd64.deb
data/: meson.build  vaxp-firewall.desktop  vaxp-firewall.gresource.xml
data/ui/: vaxp_window.ui
src/: headerbar.c  headerbar.h  main.c  meson.build  theme_manager.c  vaxp_polkit_helper.c  vaxp_polkit_helper.h  vaxp_ufw_backend.c  vaxp_ufw_backend.h  vaxp_window.c  vaxp_window.h
vaxp-firewall_1.0-1_amd64/DEBIAN/: control
vaxp-firewall_1.0-1_amd64/usr/share/polkit-1/actions/: com.vaxp.firewall.policy
