# Install Desktop File
install_data('vaxp-firewall.desktop', install_dir: get_option('datadir') / 'applications')

# Install Polkit policy
# We use polkit-1/actions dir which is standard
install_data('com.vaxp.firewall.policy', install_dir: get_option('datadir') / 'polkit-1/actions')

# Install Application Icon
install_data('vaxp-firewall.svg', install_dir: get_option('datadir') / 'icons/hicolor/scalable/apps')
